# UpskalorGenAiKT

./: README.md
Day2/: Day2.ipynb  user_baseline_stats.csv
Day3/: Day3.ipynb
Day6/: Untitled.ipynb  main.py  pyproject.toml  requirement.txt
Day6/document_index.faiss/: document_index.faiss  document_index.pkl
Day6/knowledge_base/: advice_database.json  system_policy.md  wellness_faq.md
Day7/: main.py  pyproject.toml  requirements.txt
Day7/faiss_index/: document_index.faiss  document_index.pkl
